src/test/resources/etapa3/failing/constructorAlreadyDeclared.ru
impl B {
    .() {}
    .(Int c, Int d) {}
}

struct B {}

start{}